<resources>
    <string name="app_name">Zella</string>
    <string name="app_nam">Zella Restaurant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up_">Sign_up_Activity</string>
    <string name="spinner">Choose Address</string>
    <string name="mapboxtoken">pk.eyJ1IjoieW91bW5hIiwiYSI6ImNqaGlvcXhnZDBjNmYzY25wZjJiOWplM2UifQ.zyGzcy3B01o5YCfpqB9JzA</string>
    <string name="lang">Please choose the language of your app..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="receive_sms">You will recieve WhatsApp message within 3 min </string>
    <string name="deliver_order">Deliver Order</string>
    <string name="points">Points</string>
    <string name="search">Search </string>
    <string name="delte_account"> Delete Account </string>
    <string name="delete_account_"> Are you sure you want to delete your account ? </string>
    <string name="track_order">Track Order </string>
    <string name="sub_total">Subtotal: </string>
    <string name="select_branch">Select from our branches</string>
    <string name="branches"> Branches</string>
    <string name="pickup">PICKUP</string>
    <string name="pickupfrom">PICKUP FROM:</string>
    <string name="enterLocation">Please enter a location</string>
    <string name="logintocontinue">Login to continue</string>
    <string name="current_location">Current Location</string>
    <string name="gps">Using GPS</string>
    <string name="messages">Messages</string>
    <string name="needtologin">You need to login to access this section of the app</string>
    <string name="guest">Continue as a guest</string>
    <string name="haveaccount">Have Account ?</string>
    <string name="complteaccount"> Complete Profile </string>
    <string name="identicalpassword"> Please insert identical password </string>
    <string name="select_branch_">Please select from our branches</string>
    <string name="select_delivery_">Please select delivery way</string>
    <string name="description"> Description</string>
    <string name="add_address"> Add Address </string>
    <string name="select_address"> Select your address </string>
    <string name="no_address"> Sorry you don\'t have address ,\n please Add new address</string>
    <string name="sandwith1">First Sandwich</string>
    <string name="sandwith2">Second Sandwich</string>
    <string name="sandwith3">Third Sandwich</string>
    <string name="sandwith4">Fourth Sandwich</string>
    <string name="choose1">Choose 1</string>
    <string name="notavailable">This order is not available now</string>
    <string name="minimum_order">Minmum order limit is </string>
    <string name="select_meal_sandwiches">Please choose your 4 Sandwiches </string>
    <string name="sandwithes">Sandwiches :</string>
    <string name="optional">(Required)</string>
    <string name="potatos">Your choice of potatos</string>
    <string name="drinks">Your choice of drinks</string>
    <string name="myacc">My Account</string>
    <string name="myorders">My Orders</string>
    <string name="inbox">Inbox</string>
    <string name="notifications">Notifications</string>
    <string name="networkerror">Check your network connection</string>
    <string name="menu">Menu</string>
    <string name="main">Home</string>
    <string name="favourite">Favourites</string>
    <string name="cart">Cart</string>
    <string name="aboutrestaourant"> About Us</string>
    <string name="callus">Contact us</string>
    <string name="complains">Complaints </string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="latest">Latest</string>
    <string name="offers">Offers</string>
    <string name="changelang">Change language</string>
    <string name="closeapp">Closing App</string>
    <string name="wantcloseapp">Do you want to close the app ?</string>
    <string name="mobile">Phone Number</string>
    <string name="pleaseenterphone">*Please enter your phone number</string>
    <string name="sendpasscode">Send Password</string>
    <string name="welcome">Welcome to Zella</string>
    <string name="validphone">*Please enter a valid phone number</string>
    <string name="password">Password</string>
    <string name="pass">*Please enter your password</string>
    <string name="remember">Remember me</string>
    <string name="enter">Enter</string>
    <string name="forget">Forget Password?</string>
    <string name="developed">Developed by</string>
    <string name="emcan">Emcan</string>
    <string name="name">Name</string>
    <string name="entername">*Please enter your name</string>
    <string name="enterphone">*Please enter your phone number</string>
    <string name="sign">Signup</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="unit">Unit</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="addition">Additions </string>
    <string name="addcomment">Give a comment about our food</string>
    <string name="write">Write your comment</string>
    <string name="sendcomment">Send </string>
    <string name="choosedeliveryway">Please choose delivery way</string>
    <string name="alert_code">   Please enter valid code</string>
    <string name="verify">Verifying phone number</string>
    <string name="not_receive">If you didn’t get code tap on resend</string>
    <string name="tohome">Delivery</string>
    <string name="fromrest">Take Away</string>
    <string name="inrest">In Restaurant</string>
    <string name="noadd">No addresses available</string>
    <string name="confirmadd">Confirm Address</string>
    <string name="addd">Add Address</string>
    <string name="nocomplaints">You don\'t have any complaints</string>
    <string name="allow_location">Your GPS is closed ,do you want to open? </string>
    <string name="out">You location is out of Bahrain ,unfortunately you can\'t create account</string>
    <string name="spicy">Spicy</string>
    <string name="orignal">Original</string>
    <string name="noreply">New reply... </string>
    <string name="send">Send</string>
    <string name="total">Total:</string>
    <string name="deliveryadd">Delivery Address:</string>
    <string name="region">Region:</string>
    <string name="block">Block:</string>
    <string name="road">Road:</string>
    <string name="flat">Building:</string>
    <string name="flatt">Flat:</string>
    <string name="deliveryinstructions">Delivery Notes:</string>
    <string name="confirmorder">Confirm Order</string>
    <string name="online">Online Payment</string>
    <string name="cash">Cash Payment</string>
    <string name="noorders">You don\'t have current orders</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="without">Without</string>
    <string name="anothernote">Another Note</string>
    <string name="addnote">Add a note</string>
    <string name="addtoorder">Add to my orders</string>
    <string name="reviews">Reviews :</string>
    <string name="show">Show All</string>
    <string name="rate">Add a Review</string>
    <string name="upgrade">You need to upgrade your App Version</string>
    <string name="features">Some features will not work properly</string>
    <string name="updatenow">Update Now</string>
    <string name="later">Later</string>
    <string name="more">More</string>
    <string name="changename">Edit name</string>
    <string name="changepassword">Edit password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="changeemail">Edit email address</string>
    <string name="changenum">Edit phone number</string>
    <string name="edit">Edit</string>
    <string name="mo">Phone Number (*)</string>
    <string name="reg">Region (*)</string>
    <string name="blo">Block (*)</string>
    <string name="roa">Road (*)</string>
    <string name="flattt">Home/Building (*)</string>
    <string name="flatoptional">Flat/Office (Optional)</string>
    <string name="notess">Delivery notes (Optional)</string>
    <string name="nolastorders">You don\'t have previous orders</string>
    <string name="noinbox">You don\'t have incoming messages</string>
    <string name="phone">Phone</string>
    <string name="email">Email Address</string>
    <string name="addresses">Addresses</string>
    <string name="editdata">Edit Data</string>
    <string name="nofavs">Your favourites is empty</string>
    <string name="nocart">Hey , your basket is empty ! </string>
    <string name="nocart_">Go on stock up and order your faves </string>
    <string name="add_items">Add items </string>
    <string name="totall">Total :</string>
    <string name="discount">Discount :</string>
    <string name="priceafterdisc">Total after discount :</string>
    <string name="confirm">Confirm</string>
    <string name="nonotification">You don\'t have any notifications</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="opinion">Write your opinion here...</string>
    <string name="addimage">+ Add Photos</string>
    <string name="orderdate">Order Date</string>
    <string name="orderno">Order No.</string>
    <string name="ready">Preparing</string>
    <string name="del">On The Way</string>
    <string name="delivery">Delivered</string>
    <string name="reorder">Reorder</string>
    <string name="follow">Follow Order</string>
    <string name="cancel">Cancel Order</string>
    <string name="canceled">Order cancelled by Restaurant</string>
    <string name="ok">Ok</string>
    <string name="count">Count</string>
    <string name="adddition">Additions:</string>
    <string name="withoutt">Without:</string>
    <string name="pepsii">Pepsi:</string>
    <string name="potatoo">Fries:</string>
    <string name="cheese">Cheese</string>
    <string name="skip">Skip</string>
    <string name="emailaddress">Email Address</string>
    <string name="pas">Password</string>
    <string name="errortryagain">Error try again</string>
    <string name="sent">Password has been sent to your email address</string>
    <string name="unsuccess">Unsuccessful transaction, Money has not been deducted</string>
    <string name="success">Order confirmed successfully</string>
    <string name="resuccess">Order has been resent successfully</string>
    <string name="accountadded">Your account has been created successfully</string>
    <string name="deleteadd">Are you sure you want to delete that address?</string>
    <string name="deletedadd">Address deleted</string>
    <string name="surecartdelete">Are you sure you want to delete that dish from cart?</string>
    <string name="deletedfromcart">Dish deleted from cart</string>
    <string name="deletefromfav">Are you sure you want to delete this dish from favourites?</string>
    <string name="deletedfromfav">Dish deleted from favourites</string>
    <string name="last">Previous</string>
    <string name="current">Current</string>
    <string name="addtofav">Dish added successfully to favourites</string>
    <string name="signfirst">You have to Signup first</string>
    <string name="deletecomment">Are you sure you want to delete this comment?</string>
    <string name="commdeleted">Comment deleted successfully</string>
    <string name="addrate">Add Comment</string>
    <string name="editrate">Edit comment</string>
    <string name="addre">Please write your comment</string>
    <string name="addr">Please choose your rating</string>
    <string name="commedited">Comment edited successfully</string>
    <string name="commadded">Comment added successfully</string>
    <string name="chooseadd">Choose Address</string>
    <string name="choose">Please choose delivery address</string>
</resources>