<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="#ffffff"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <TextView  android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txt1"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/upgrade"/>

    <TextView  android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/image"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:id="@+id/txt1"
        android:text="@string/features"/>

 <ImageView android:layout_width="120dp"
     android:layout_height="200dp"
     android:layout_centerInParent="true"
     android:id="@+id/image"
     android:src="@drawable/update"/>
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <TextView android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/update_rounded"
            android:padding="10dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/update"
            android:layout_alignParentStart="true"
            android:text="@string/updatenow"
            android:textStyle="bold"
            android:textColor="#4a4a4a"
            />
        <TextView android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/update_rounded"
            android:padding="10dp"
            android:gravity="center"
            android:id="@+id/cancel"
            android:layout_toEndOf="@+id/update"
            android:layout_margin="10dp"
            android:text="@string/later"
            android:textStyle="bold"
            android:textColor="#4a4a4a"
            />

    </LinearLayout>

</RelativeLayout>