<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="80dp"
    android:background="@drawable/back_ground"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="text"
        android:gravity="start"
        />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changename"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/e1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/name"
        android:id="@+id/password"
        android:inputType="text"
        android:gravity="start"
        />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changepassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/e2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/confirm_password"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:hint="@string/confirmpassword"
        android:layout_below="@+id/password"
        android:gravity="start"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/email"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:visibility="gone"
        android:layout_below="@+id/confirm_password"
        android:inputType="textEmailAddress"
        android:gravity="start"
        />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeemail"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/email"
        android:gravity="start"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginEnd="10dp"
        android:id="@+id/phone"
        android:layout_below="@+id/email"
        android:inputType="phone"
        android:gravity="start"
        android:enabled="false"
        android:clickable="false"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/phone"
        android:layout_marginEnd="20dp"
        android:id="@+id/e3" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginBottom="60dp"
        android:layout_below="@+id/e3">

    <Button android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phone"
        android:layout_weight="1"
        android:background="@drawable/rounded_3"
        android:text="@string/edit"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:id="@+id/edit"/>

    <Button android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_3"
        android:text="@string/delte_account"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:id="@+id/delete"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>