<?xml version="1.0" encoding="UTF-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="80dp"
    android:background="@drawable/back_ground"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="center">

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">


                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:textSize="16dp"
                    android:id="@+id/txt"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    />

    <RelativeLayout android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_frame15"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

    <EditText android:layout_height="40dp"
        android:layout_width="match_parent"
        android:gravity="start"
        android:id="@+id/title"
        android:layout_gravity="start"
        android:inputType="text"
        android:backgroundTint="#00FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:padding="5dp"
        android:hint="@string/title">
        <requestFocus/></EditText>

</RelativeLayout>

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:id="@+id/txt1"
                    />

    <RelativeLayout android:layout_marginTop="20dp"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_frame15"
        android:layout_marginStart="40dp"
        android:id="@+id/rel_note"
        android:layout_marginEnd="40dp">

        <EditText  android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            android:lineSpacingExtra="7dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"

            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:layout_centerHorizontal="true"
            android:gravity="start"
            android:layout_margin="10dp"
            android:textSize="16dp"
            android:id="@+id/content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/opinion"
           />
    </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    />

                <Button
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="45dp"
                    android:layout_width="200dp"
                    android:id="@+id/add_photos"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_3"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:textAllCaps="false"
                    android:text="@string/addimage"/>

                <Button android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:id="@+id/send"
        android:layout_gravity="center"
        android:background="@drawable/rounded_3"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:text="@string/send"
        android:textAllCaps="false"/>

</LinearLayout>

    <ProgressBar android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"/>

</RelativeLayout>

</ScrollView>
